# Sakaar-Smart

./: .gitignore  CMakeLists.txt  main.c
include/: an_analize.h  cg_code.h  op_operations.h  op_structs.h  sc_structs.h  sm_semantic.h  sn_syntax.h  tk_tokenize.h
include/an_analize/: an_expr.h  an_oper.h  an_stmt.h
include/cg_code/: cg_generation.h
include/op_structs/: op_class.h  op_function.h  op_object.h
include/sc_structs/: an_node.h  an_parser.h  ast_node.h  attrib.h  attrib_list.h  block.h  block_list.h  bytecode.h  bytecode_list.h  closure.h  closure_list.h  frame.h  frame_list.h  node.h  node_list.h  op_attrib.h  op_class.h  op_closure.h  op_func.h  op_object.h  op_state.h  parser.h  sc_error.h  sc_parser.h  sm_state.h  tk_parser.h  tk_token.h  token.h  token_list.h  variable.h  variable_list.h
include/sm_semantic/: sm_make_ident.h
include/sn_syntax/: sn_expr.h  sn_impr.h  sn_oper.h  sn_stmt.h
include/tk_tokenize/: tk_identifier.h  tk_integer.h  tk_keyword.h  tk_special.h  tk_string.h
lib/Sakaar-Memory/: CMakeLists.txt
lib/Sakaar-Memory/include/: memory.h
lib/Sakaar-Memory/src/: memory.c
src/: tk_tokenize.c
src/an_analize/: an_expr.c  an_oper.c  an_stmt.c
src/cg_code/: cg_generation.c
src/op_operations/: op_temp.c
src/op_structs/: op_class.c  op_function.c  op_object.c
src/sc_structs/: an_node.c  an_parser.c  ast_node.c  attrib.c  attrib_list.c  block.c  block_list.c  bytecode.c  bytecode_list.c  closure.c  closure_list.c  frame.c  frame_list.c  node.c  node_list.c  op_attrib.c  op_block.c  op_class.c  op_closure.c  op_func.c  op_object.c  op_state.c  parser.c  sc_error.c  sc_parser.c  sm_state.c  tk_parser.c  tk_token.c  token.c  token_list.c  variable.c  variable_list.c  variable_list_list.c
src/sm_semantic/: sm_make_ident.c  sm_semantic.c
src/sn_syntax/: sn_expr.c  sn_impr.c  sn_oper.c  sn_stmt.c
src/tk_tokenize/: tk_identifier.c  tk_integer.c  tk_keyword.c  tk_special.c  tk_string.c  tk_tokenize.c
